spec/e2e/constructor/missing_arguments.lit
type Foo {
  init { |a, b|}
}

var foo = Foo(1) # error: [line 5] Runtime error: Expected 2 arguments but got 1.
